[tool.poetry]
name = "airbnb23-backend"
version = "0.1.0"
description = ""
authors = ["qpthedev <qpthedev@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pillow = "^9.5.0"
djangorestframework = "^3.14.0"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
